Modificando a pagina html para o novo endereço

--- a/public/paginas/docs.html
+++ b/public/paginas/docs.html
@@ -24,12 +24,12 @@
              Utilize os seguintes exemplos.
          </p>
          <blockquote>
-            <a href="https://cep-bemean.herokuapp.com/api/br/88370410" target="_blank">
-                https://cep-bemean.herokuapp.com/api/br/88370410
+            <a href="https://cep.webschool.io/api/br/88370410" target="_blank">
+                https://cep.webschool.io/api/br/88370410
             </a>
         </br>
-        <a href="https://cep-bemean.herokuapp.com/api/br/88370-410" target="_blank">
-            https://cep-bemean.herokuapp.com/api/br/88370-410
+        <a href="https://cep.webschool.io/api/br/88370-410" target="_blank">
+            https://cep.webschool.io/api/br/88370-410
         </a>
     </blockquote>
 
@@ -69,7 +69,6 @@
 <div class="col-md-3"> 
  <img src="img/logo.png" style="height: 60%; width: 100%">
  <img src="img/logo-webschool.png" style="height: 60%; width: 100%">
- 
 </div>
 </div>
 </div>
