Colocando o retorno do json no novo formato

--- a/public/paginas/docs.html
+++ b/public/paginas/docs.html
@@ -43,7 +43,8 @@
     "state": "SC",
     "district": "Centro",
     "address": "Rua Ezequiel Antero Rocha",
-    "city": "Navegantes"
+    "city": "Navegantes",
+    "ibge": "4211306"
 }
         </code>
     </pre>
